Whitespace fixup for CMake files
replace tabs by spaces

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -9,9 +9,9 @@ find_program(SPHINX sphinx-build)
 find_package(Qt6 QUIET OPTIONAL_COMPONENTS ToolsTools)
 
 set(FILENAMES
-	index commandline requests object-ids common-actions database options
-	certificates revocationlist changelog introduction privatekey
-	step-by-step certificate-input template smartcard miscellaneous
+    index commandline requests object-ids common-actions database options
+    certificates revocationlist changelog introduction privatekey
+    step-by-step certificate-input template smartcard miscellaneous
 )
 
 foreach(file ${FILENAMES})
@@ -41,53 +41,53 @@ WixFile(${D}/documentation.wxs ${WIX_DOC_CONTENT})
 if(SPHINX)
   configure_file(${S}/conf.py.in ${RST}/conf.py)
   add_custom_command(
-	OUTPUT ${HTML_DEST}
-	COMMAND ${SPHINX} -q -b html ${RST} ${D}/html
-	DEPENDS ${RST}/conf.py sphinx-src
-	COMMENT "Create HTML documentation"
+    OUTPUT ${HTML_DEST}
+    COMMAND ${SPHINX} -q -b html ${RST} ${D}/html
+    DEPENDS ${RST}/conf.py sphinx-src
+    COMMENT "Create HTML documentation"
   )
   add_custom_target(sphinx-html DEPENDS ${HTML_DEST})
   add_custom_command(
-	OUTPUT ${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
-	COMMAND ${SPHINX} -q -b qthelp ${RST} ${D}/qthelp
-	DEPENDS ${RST}/conf.py sphinx-src
-	COMMENT "Create context sensitive help"
+    OUTPUT ${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
+    COMMAND ${SPHINX} -q -b qthelp ${RST} ${D}/qthelp
+    DEPENDS ${RST}/conf.py sphinx-src
+    COMMENT "Create context sensitive help"
   )
   add_custom_target(sphinx-qthelp
-	DEPENDS ${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
+    DEPENDS ${D}/qthelp/xca.qhcp ${D}/qthelp/xca.qhp ${QTHELP_DEST}
   )
   add_custom_command(
-	OUTPUT ${RST}/database_schema.sql
-	COMMAND ${CMAKE_COMMAND} -E make_directory ${RST}/_static
-	COMMAND ${CMAKE_COMMAND}
-		-D SRC=${PROJECT_SOURCE_DIR}/lib/database_schema.cpp
-		-D DST=${RST}/database_schema.sql
-		-P ${PROJECT_SOURCE_DIR}/cmake/database_schema.cmake
-	DEPENDS ${PROJECT_SOURCE_DIR}/lib/database_schema.cpp
-	COMMENT "Generating database schema SQL documentation"
+    OUTPUT ${RST}/database_schema.sql
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${RST}/_static
+    COMMAND ${CMAKE_COMMAND}
+        -D SRC=${PROJECT_SOURCE_DIR}/lib/database_schema.cpp
+        -D DST=${RST}/database_schema.sql
+        -P ${PROJECT_SOURCE_DIR}/cmake/database_schema.cmake
+    DEPENDS ${PROJECT_SOURCE_DIR}/lib/database_schema.cpp
+    COMMENT "Generating database schema SQL documentation"
   )
   add_custom_command(
-	OUTPUT ${D}/rst.stamp
-	BYPRODUCTS ${RST}/COPYRIGHT ${RST}/changelog ${RST_DEST}
-	COMMAND ${CMAKE_COMMAND} -E make_directory ${RST}/_static
-	COMMAND ${CMAKE_COMMAND} -E copy_if_different
-				${PROJECT_SOURCE_DIR}/img/bigcert.png
-				${RST}/_static
-	COMMAND ${CMAKE_COMMAND} -E copy_if_different
-				${PROJECT_SOURCE_DIR}/COPYRIGHT
-				${PROJECT_SOURCE_DIR}/changelog
-				${RST_SOURCE} ${RST}
-	COMMAND ${CMAKE_COMMAND} -E touch ${D}/rst.stamp
-	DEPENDS ${PROJECT_SOURCE_DIR}/COPYRIGHT
-		${PROJECT_SOURCE_DIR}/changelog
-		${RST_SOURCE}
-	COMMENT "Prepare Sphinx source directory"
+    OUTPUT ${D}/rst.stamp
+    BYPRODUCTS ${RST}/COPYRIGHT ${RST}/changelog ${RST_DEST}
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${RST}/_static
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${PROJECT_SOURCE_DIR}/img/bigcert.png
+            ${RST}/_static
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${PROJECT_SOURCE_DIR}/COPYRIGHT
+            ${PROJECT_SOURCE_DIR}/changelog
+            ${RST_SOURCE} ${RST}
+    COMMAND ${CMAKE_COMMAND} -E touch ${D}/rst.stamp
+    DEPENDS ${PROJECT_SOURCE_DIR}/COPYRIGHT
+            ${PROJECT_SOURCE_DIR}/changelog
+            ${RST_SOURCE}
+    COMMENT "Prepare Sphinx source directory"
   )
   add_custom_command(
-	OUTPUT ${RST}/arguments.rst
-	DEPENDS xcadoc
-	COMMAND xcadoc rst ${RST}/arguments.rst
-	COMMENT "Generate 'rst' commandline documentation"
+    OUTPUT ${RST}/arguments.rst
+    DEPENDS xcadoc
+    COMMAND xcadoc rst ${RST}/arguments.rst
+    COMMENT "Generate 'rst' commandline documentation"
   )
   target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${HTML_DEST})
   foreach(EXPORT_TOPIC x509 x509-clp key key-clp request revocation)
@@ -103,10 +103,10 @@ if(SPHINX)
 
   add_dependencies(${CMAKE_PROJECT_NAME} sphinx-html)
   add_custom_target(sphinx-src
-	DEPENDS ${D}/rst.stamp
-		${RST}/database_schema.sql
-		${RST}/arguments.rst
-    ${EXPORT_TOPICS}
+    DEPENDS ${D}/rst.stamp
+            ${RST}/database_schema.sql
+            ${RST}/arguments.rst
+            ${EXPORT_TOPICS}
   )
 
   if (UNIX)
@@ -134,10 +134,10 @@ if(SPHINX)
   if(QHELPGEN)
     set(QTHELP_IDX ${D}/qthelp/xca.qhc)
     add_custom_command(
-	OUTPUT ${QTHELP_IDX} ${D}/qthelp/xca.qch
-	COMMAND ${QHELPGEN} ${D}/qthelp/xca.qhcp
-	DEPENDS sphinx-qthelp
-	COMMENT "Create context sensitive help index"
+      OUTPUT ${QTHELP_IDX} ${D}/qthelp/xca.qch
+      COMMAND ${QHELPGEN} ${D}/qthelp/xca.qhcp
+      DEPENDS sphinx-qthelp
+      COMMENT "Create context sensitive help index"
     )
     add_custom_target(sphinx-qtcollgen DEPENDS ${QTHELP_IDX})
     target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${QTHELP_DEST} ${QTHELP_IDX})
@@ -163,22 +163,20 @@ endif(SPHINX)
 
 if (NOT WIN32)
   add_custom_command(
-	OUTPUT "${D}/xca.1.gz"
-	COMMAND cat "${S}/xca.1.head" "${D}/xca.1.options" "${S}/xca.1.tail" | gzip -n9 > "${D}/xca.1.gz"
-	DEPENDS "${S}/xca.1.head" "${S}/xca.1.tail"
-		"${D}/xca.1.options"
-	COMMENT "Compiling man page"
+    OUTPUT "${D}/xca.1.gz"
+    COMMAND cat "${S}/xca.1.head" "${D}/xca.1.options" "${S}/xca.1.tail" | gzip -n9 > "${D}/xca.1.gz"
+    DEPENDS "${S}/xca.1.head" "${S}/xca.1.tail"
+            "${D}/xca.1.options"
+    COMMENT "Compiling man page"
   )
   add_custom_command(
-	OUTPUT "${D}/xca.1.options"
-	COMMAND xcadoc man "${D}/xca.1.options"
-	COMMENT "Generate 'man' commandline documentation"
+    OUTPUT "${D}/xca.1.options"
+    COMMAND xcadoc man "${D}/xca.1.options"
+    COMMENT "Generate 'man' commandline documentation"
   )
   add_custom_target(manpage ALL DEPENDS ${D}/xca.1.gz)
   if (NOT APPLE)
-    install(FILES "${D}/xca.1.gz"
-        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1
-    )
+    install(FILES "${D}/xca.1.gz" DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
   endif()
   add_dependencies(${CMAKE_PROJECT_NAME} manpage)
 endif()
