Close #552: issues with icons in gnome dock
coreApp->setOrganizationDomain() expects the domain
in DNS order (hohnstaedt.de) and not reversed.

Change the WM_CLASS property to "de.hohnstaedt.xca"
via setApplicationName().
While Qt6 prepends the reversed "OrganizationDomain",
Qt5 does not and setting the complete name with
domain-prefix works for both.

Also adopt the ".desktop" file name to follow the application-name
and fix issues found by "desktop-file-validate"

--- a/misc/CMakeLists.txt
+++ b/misc/CMakeLists.txt
@@ -56,7 +56,7 @@ if (UNIX AND NOT APPLE)
   install(FILES ${TEXT_FILES} ${XCA_TEMPLATES}
         DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}
   )
-  install(FILES misc/xca.desktop
+  install(FILES misc/de.hohnstaedt.xca.desktop
         DESTINATION ${CMAKE_INSTALL_DATADIR}/applications
   )
   install(FILES misc/xca.completion
